# pdac_ml

./: README.md  algorithm.py  dataset.py  eval.py  gradcam_viz.py  metrics_validation.py  model.py  pyproject.toml  train.py
models/cancer_resnet18_binary_new/: model_test_indices.pt
scripts/: ipykernel_install.py  list_kernels.py
test_results/: evaluation_results.json
